# worklog-for-claude

./: .gitignore  LICENSE  PROJECT.md  README.md  install.sh  uninstall.sh
.claude/git-hooks/: post-commit
.claude/hooks/: commit-doc-check.sh
.worklogs/: .snapshot  2026-03-01.md  2026-03-02.md
commands/: finish.md  migrate-worklogs.md  update-worklog.md  worklog-config.md  worklog-update.md  worklog.md
docs/2026-03-14/add-e2e-tests/: state.json
docs/2026-03-14/add-e2e-tests/phase-1-worklog-write/: step-2.md
docs/2026-03-14/add-e2e-tests/phase-2-hooks/: step-1.md
docs/2026-03-14/add-e2e-tests/verifications/: round-1.md  round-2.md  round-3.md
docs/2026-03-15/fix-update-check-exit1/: state.json
git-hooks/: post-commit
hooks/: on-commit.sh  post-commit.sh  session-end.sh  stop.sh  worklog.sh
mcp/: pyproject.toml
mcp/src/worklog_mcp/: server.py
mcp/tests/: test_server.py
rules/: auto-commit-rules.md  worklog-rules.md
scripts/: duration.py  healthcheck.sh  notion-migrate-worklogs.sh  notion-worklog.sh  token-cost.py  update-check.sh  worklog-update-check.sh  worklog-write.sh
tests/: test_full_lifecycle_e2e.py  test_healthcheck_e2e.py  test_hooks_e2e.py  test_install_e2e.py  test_migrate.py  test_post_commit_e2e.py  test_worklog_modes.py  test_worklog_write_e2e.py
