[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worklog-for-claude"
version = "0.1.0"
description = "MCP server for worklog and project documentation management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
worklog-for-claude = "worklog_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worklog_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
